@@ -1,1 +1,1 @@
-2.4.1.0
+2.4.1
